CSS: fixed layout bug: do not make html *and* body a grid! Otherwise we'll have nested grids.

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -104,7 +104,7 @@
 /***************/
 
 /* .page is the element when used as a web component */
-html, body, .page {
+body, .page {
     display: grid;
 
     grid-template-columns: [margin-left] var(--marginleftwidth) [body] var(--textwidth) [margin-right] var(--marginrightwidth);
